Name:                Pugs
Version:             6.2.10
Copyright:           2005, Autrijus Tang
Author:              Autrijus Tang <autrijus@autrijus.org>
Maintainer:          Autrijus Tang <autrijus@autrijus.org>
License:             GPL
License-File:        LICENSE
Build-Depends:       base, stm, mtl, QuickCheck
Exposed-modules:     PIL
Other-modules:       PIL.Compile,   PIL.Exp,       PIL.MetaModel, PIL.Pad,    PIL.Tie,
                     PIL.Container, PIL.Internals, PIL.Monads,    PIL.Parser, PIL.Val,
                     PIL.PIL,       PIL.Str
Extensions:          CPP, ForeignFunctionInterface
GHC-options:         -Wall -O0
C-sources:           src/cbits/fpstring.c, src/UnicodeC.c
Include-dirs:        src/cbits, src
Hs-source-dirs:      src

Executable:          pil
Main-is:             PIL/Main.hs
Other-modules:       PIL.Compile,   PIL.Exp,       PIL.MetaModel, PIL.Pad,    PIL.Tie,
                     PIL.Container, PIL.Internals, PIL.Monads,    PIL.Parser, PIL.Val,
                     PIL.PIL,       PIL.Str
C-sources:           src/cbits/fpstring.c, src/UnicodeC.c
Include-dirs:        src/cbits, src
Hs-source-dirs:      src

Executable:          pugs
Main-is:             Main.hs
Other-modules:       PIL.Compile,   PIL.Exp,       PIL.MetaModel, PIL.Pad,    PIL.Tie,
                     PIL.Container, PIL.Internals, PIL.Monads,    PIL.Parser, PIL.Val,
                     PIL.PIL,       PIL.Str
C-sources:           src/cbits/fpstring.c, src/UnicodeC.c
Include-dirs:        src/cbits, src/syck, src
Hs-source-dirs:      src
