Name            : Pugs
Version         : 6.2.13.11
license         : BSD3
license-file    : LICENSE/MIT
cabal-version   : >= 1.2
copyright       : 2005-2008, The Pugs Contributors
maintainer      : Audrey Tang <audreyt@audreyt.org>
category        : Language, Pugs
stability       : experimental
build-type      : Custom
homepage        : http://pugscode.org/
synopsis        : A Perl 6 Implementation
description     : A Perl 6 Implementation
author          : Audrey Tang <audreyt@audreyt.org>
tested-with     : GHC
data-files      :
    third-party/Parse-Yapp/lib/Parse/Yapp/Driver.pm
    third-party/Parse-Yapp/lib/Parse/Yapp/Grammar.pm
    third-party/Parse-Yapp/lib/Parse/Yapp/Lalr.pm
    third-party/Parse-Yapp/lib/Parse/Yapp/Options.pm
    third-party/Parse-Yapp/lib/Parse/Yapp/Output.pm
    third-party/Parse-Yapp/lib/Parse/Yapp/Parse.pm
    third-party/Parse-Yapp/lib/Parse/Yapp.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/AST/Expression.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Compiler/Grammar.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Compiler/Regex.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Compiler/RegexPerl5.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Compiler/Rule.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Compiler/Token.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Grammar/Perl5.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Rule/Parsec.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Rule/Perl5/CharClass.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Rule/Perl5/Ratchet.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Rule/Perl5/Regex.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Rule/Perl5.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Emitter/Rule/Perl6/Ratchet.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Grammar/Base.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Grammar/Precedence.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Grammar/Rule.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Grammar/Rule.pmc
    perl5/Pugs-Compiler-Rule/lib/Pugs/Grammar/Rule2.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Grammar/RulePure.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/Common.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/Match/HsBridge.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/Match.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/Regex.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/Rule.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/StrPos.pm
    perl5/Pugs-Compiler-Rule/lib/Pugs/Runtime/Tracer.pm
extra-source-files:
    src/Pugs.hs
    src/Pugs/AST.hs
    src/Pugs/AST.hs-boot
    src/Pugs/AST/Eval.hs
    src/Pugs/AST/Functions.hs
    src/Pugs/AST/Internals.hs
    src/Pugs/AST/Internals.hs-boot
    src/Pugs/AST/Internals/Instances.hs
    src/Pugs/AST/Pad.hs
    src/Pugs/AST/Pos.hs
    src/Pugs/AST/Prag.hs
    src/Pugs/AST/SIO.hs
    src/Pugs/AST/Scope.hs
    src/Pugs/AST/Utils.hs
    src/Pugs/AST/Types.hs
    src/Pugs/Bind.hs
    src/Pugs/Class.hs
    src/Pugs/CodeGen.hs
    src/Pugs/CodeGen/JSON.hs
    src/Pugs/CodeGen/PIL1.hs
    src/Pugs/CodeGen/PIR.hs
    src/Pugs/CodeGen/PIR/Prelude.hs
    src/Pugs/CodeGen/Perl5.hs
    src/Pugs/CodeGen/YAML.hs
    src/Pugs/CodeGen/Binary.hs
    src/Pugs/Compile.hs
    src/Pugs/Compile/Pugs.hs
    src/Pugs/Config.hs
    src/Pugs/Cont.hs
    src/Pugs/Embed.hs
    src/Pugs/Embed/Haskell.hs
    src/Pugs/Embed/Perl5.hs
    src/Pugs/Embed/Pugs.hs
    src/Pugs/Eval.hs
    src/Pugs/Eval/Var.hs
    src/Pugs/Exp.hs
    src/Pugs/Exp.hs-boot
    src/Pugs/External.hs
    src/Pugs/External/Haskell.hs
    src/Pugs/Help.hs
    src/Pugs/Internals.hs
    src/Pugs/Junc.hs
    src/Pugs/Lexer.hs
    src/Pugs/Meta.hs
    src/Pugs/Meta/Class.hs
    src/Pugs/Meta/Perl5.hs
    src/Pugs/Meta/Str.hs
    src/Pugs/Monads.hs
    src/Pugs/PIL1.hs
    src/Pugs/PIL1/Instances.hs
    src/Pugs/Parser.hs
    src/Pugs/Parser.hs-boot
    src/Pugs/Parser/Charnames.hs
    src/Pugs/Parser/Doc.hs
    src/Pugs/Parser/Export.hs
    src/Pugs/Parser/Literal.hs
    src/Pugs/Parser/Number.hs
    src/Pugs/Parser/Operator.hs
    src/Pugs/Parser/Program.hs
    src/Pugs/Parser/Types.hs
    src/Pugs/Parser/Unsafe.hs
    src/Pugs/Parser/Util.hs
    src/Pugs/Prelude.hs
    src/Pugs/Pretty.hs
    src/Pugs/Prim.hs
    src/Pugs/Prim/Code.hs
    src/Pugs/Prim/Eval.hs
    src/Pugs/Prim/FileTest.hs
    src/Pugs/Prim/Keyed.hs
    src/Pugs/Prim/Lifts.hs
    src/Pugs/Prim/List.hs
    src/Pugs/Prim/Match.hs
    src/Pugs/Prim/Numeric.hs
    src/Pugs/Prim/Param.hs
    src/Pugs/Prim/Yaml.hs
    src/Pugs/Rule.hs
    src/Pugs/Run.hs
    src/Pugs/Run/Args.hs
    src/Pugs/Run/Perl5.hs
    src/Pugs/Shell.hs
    src/Pugs/Types.hs
    src/Pugs/Types/Array.hs
    src/Pugs/Types/Code.hs
    src/Pugs/Types/Handle.hs
    src/Pugs/Types/Hash.hs
    src/Pugs/Types/Object.hs
    src/Pugs/Types/Pair.hs
    src/Pugs/Types/Rule.hs
    src/Pugs/Types/Scalar.hs
    src/Pugs/Types/Thunk.hs
    src/Pugs/Val.hs
    src/Pugs/Val/Base.hs
    src/Pugs/Val/Capture.hs
    src/Pugs/Val/Code.hs
    src/Pugs/Version.hs
    Configure.PL
    perl5/p5embed.c
    perl5/p5embed.h
    perl5/perlxsi.c
    perl5/pugsembed.c
    perl5/pugsembed.h

flag Perl5
    description: Enable Perl 5 Embedding
    default:     True

executable pugs
    main-is:            Main.hs
    hs-source-dirs:     src

    build-depends:
        base, haskell98, filepath, mtl, stm, parsec < 3.0.0, network,
        pretty, time, random, process, containers, bytestring,
        array, directory, utf8-string, binary, haskeline >= 0.2.1, FindBin,

        MetaObject       >= 0.0.4,
        HsParrot         >= 0.0.2,
        pugs-compat      >= 0.0.5,
        pugs-DrIFT       >= 2.2.3.0,
        stringtable-atom >= 0.0.4,
        HsSyck           >= 0.44
        -- HsPerl5

    if flag(Perl5)
        cpp-options: -DPUGS_HAVE_PERL5=1

    c-sources:
        src/cbits/Prelude_pm.c src/cbits/Test_pm.c
        src/perl5/p5embed.c

    includes:
        src/perl5/p5embed.h
